# estimulator

./: README.md
controlador_qt/: CMakeLists.txt  deploy.sh  run_ssh.sh
controlador_qt/src/: controlador.pro  i2cmodule.cpp  i2cmodule.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
firmware/: .cproject  bits.h  comm.c  comm.h  estimulador.c  estimulador.h  main.c  mcp4921.c  mcp4921.h  spi.c  spi.h  twiSlave.c  twiSlave.h  usart.c
firmware_adc/: bits.h  comm.c  comm.h  main.c  twiSlave.c  usart.h
firmware_i2cMaster/: i2c.c  main.c
